<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings related to the tournament -->
    <string name="action_delete_tournament">Delete Tournament</string>
    <string name="delete_tournament">Delete this tournament?</string>
    <string name="delete_tournament_desc">Are you sure you want to delete this tournament? If deleted, it will also be removed from all other devices!</string>
    <string name="delete_tournament_desc_offline">Are you sure you want to delete this tournament?</string>
    <string name="title_tournaments">Tournaments</string>
    <string name="title_info">Info</string>
    <string name="title_teams">Teams</string>
    <string name="title_matches">Matches</string>
    <string name="title_leaderboard">Leaderboard</string>

    <string name="empty_tab_info">The matches in which you play will appear here</string>
    <string name="empty_tab_teams">You can add each team manually or add them from the matches</string>
    <string name="empty_tab_matches">Add the matches and their results here</string>
    <string name="empty_tab_leaderboard">Ranking could not be computed</string>

    <!-- Strings related to team -->
    <string name="team_starting_zone_left">Left</string>
    <string name="team_starting_zone_right">Right</string>
    <string name="team_id_name">#%d - %s</string>
    <string name="team_predicted_score">Predicted Score: %d</string>
    <string name="autonomous_score">Autonomous Score: %d</string>
    <string name="driver_controlled_score">Driver Controlled Score: %d</string>
    <string name="endgame_score">End Game Score: %d</string>
    <string name="total_score">Total Score: %d</string>
    <string name="team_description">Autonomous Score: %d\nDriver Controlled Score: %d\nPreferred Start Zone: %s\nNotes: %s</string>
    <string name="team_notes">Notes</string>
    <string name="delete_team">Delete this team?</string>
    <string name="delete_team_desc">Are you sure you want to delete this team? If deleted, it will also be removed from all other devices!</string>
    <string name="delete_team_desc_offline">Are you sure you want to delete this team?</string>
    <string name="period_autonomous">Autonomous</string>
    <string name="period_driver_controlled">Driver Controlled</string>
    <string name="period_end_game">End Game</string>
    <string name="prompt_autonomous_score">Autonomous Score</string>
    <string name="prompt_driver_controlled_score">Driver Controlled Score</string>
    <string name="prompt_wobble_delivery">Wobble Goal Delivery</string>
    <string name="prompt_wobble_delivery_zone">Wobble Goal Delivery:</string>
    <string name="prompt_wobble_delivery_start_line">Start Line</string>
    <string name="prompt_wobble_delivery_dead_zone">Dead Zone</string>
    <string name="prompt_wobble_rings">Wobble Goal Rings</string>
    <string name="prompt_navigation">Navigation</string>
    <string name="prompt_low_goal">Low Goal</string>
    <string name="prompt_mid_goal">Mid Goal</string>
    <string name="prompt_high_goal">High Goal</string>
    <string name="prompt_power_shot">Power Shot</string>
    <string name="prompt_parking">Parking</string>
    <string name="start_zone">Preferred Start Zone:</string>

    <!-- Strings related to matches -->
    <string name="delete_match">Delete this match?</string>
    <string name="delete_match_desc">Are you sure you want to delete this team? If deleted, it will also be removed from all other devices!</string>
    <string name="delete_match_desc_offline">Are you sure you want to delete this team?</string>
    <string name="prompt_match_number">Match Number</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="prompt_first_team">First Team</string>
    <string name="prompt_second_team">Second Team</string>
    <string name="prompt_score">Score</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="match_blue_won">Blue Won</string>
    <string name="match_red_won">Red Won</string>
    <string name="match_not_played">Not played</string>
    <string name="match_draw">Draw</string>
    <string name="match_basic_info">R%d &#8211; B%d: %s</string>
    <string name="match_score_details">Red: %d &#8211; Blue: %d</string>
    <string name="match_detailed_info">Red Alliance: %d and %d\nBlue Alliance: %d and %d</string>
    <string name="match_info_red_alliance">Red Alliance: %d and %d</string>
    <string name="match_info_blue_alliance">Blue Alliance: %d and %d</string>
    <string name="add_teams_from_matches">Add teams from matches</string>
    <string name="add_teams_from_matches_desc">Are you sure you want to add all the teams from the Matches?</string>

    <!-- Strings related to OPR -->
    <string name="opr_error_no_matches">No matches found. Leaderboard can not be computed</string>
    <string name="opr_error_data">Something went wrong. Please check the input data</string>
    <string name="opr_info">Leaderboard Algorithm</string>
    <string name="opr_info_desc">The Leaderboard page takes the results of the matches in the tournament and uses the <b>Offensive Power Ranking</b> algorithm to rank the teams.</string>

    <!-- Strings related to CSV -->
    <string name="spreadsheet_error">Failed to export to CSV</string>
    <string name="csv_saved_successfully">Exported to CSV successfully</string>
    <string name="csv_export">Export to CSV</string>
    <string name="csv_import">Import from CSV</string>
    <string name="csv_export_teams">Export teams to CSV</string>
    <string name="csv_export_matches">Export matches to CSV</string>
    <string name="csv_export_opr">Export the Offensive Power Ranking to CSV</string>
    <string name="csv_import_teams">Import teams from CSV</string>
    <string name="csv_import_matches">Import matches from CSV</string>

    <!-- Color Mark-->
    <string name="color_mark">Color Mark:</string>
    <string name="color_default">Default</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
</resources>
