<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_graph_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="0"
        android:title="@string/title_info" />

    <item
        android:id="@+id/nav_graph_teams"
        android:icon="@drawable/ic_teams"
        android:orderInCategory="1"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/nav_graph_matches"
        android:icon="@drawable/ic_matches_filled"
        android:orderInCategory="2"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/nav_graph_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:orderInCategory="3"
        android:title="@string/title_leaderboard" />

</menu>
