<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/edit_team_dialog"
    tools:context=".ui.activity.TournamentActivity">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_team_number"
                style="@style/TextInputLayoutTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_weight="0.35">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_team_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_team_number"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minEms="7"
                    android:nextFocusDown="@id/et_team_name"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_team_name"
                style="@style/TextInputLayoutTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_weight="0.65">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_team_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_autonomous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/period_autonomous"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_auto_wobble_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/prompt_wobble_delivery"
            android:textSize="16sp" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_auto_low_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="3"
            app:text="@string/prompt_low_goal" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_auto_mid_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="3"
            app:text="@string/prompt_mid_goal" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_auto_high_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="3"
            app:text="@string/prompt_high_goal" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_auto_power_shot"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="3"
            app:text="@string/prompt_power_shot" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_auto_parking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/prompt_navigation"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_autonomous_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/colorSecondary"
            android:textSize="15.5sp"
            tools:text="@string/autonomous_score" />

        <TextView
            android:id="@+id/tv_driver_controlled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/period_driver_controlled"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_low_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="30"
            app:text="@string/prompt_low_goal" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_mid_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="30"
            app:text="@string/prompt_mid_goal" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_high_goal"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="30"
            app:text="@string/prompt_high_goal" />

        <TextView
            android:id="@+id/tv_driver_controlled_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/colorSecondary"
            android:textSize="15.5sp"
            tools:text="@string/driver_controlled_score" />

        <TextView
            android:id="@+id/tv_endgame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/period_end_game"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_power_shot"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="3"
            app:text="@string/prompt_power_shot" />

        <net.gearmaniacs.core.view.CounterView
            android:id="@+id/ct_wobble_rings"
            style="@style/CounterViewEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:max="10"
            app:text="@string/prompt_wobble_rings" />

        <TextView
            android:id="@+id/tv_wobble_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/prompt_wobble_delivery_zone"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_wobble_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_horizontal"
            app:checkedButton="@id/rb_wobble_delivery_none"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_wobble_delivery_none"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_wobble_delivery_start_line"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_wobble_delivery_start_line"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_wobble_delivery_dead_zone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_wobble_delivery_dead_zone"
                android:textSize="16sp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tv_endgame_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/colorSecondary"
            android:textSize="15.5sp"
            tools:text="@string/endgame_score" />

        <TextView
            android:id="@+id/tv_total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            tools:text="@string/total_score" />

        <TextView
            android:id="@+id/tv_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category_other"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_color_marker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/color_marker"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_color_marker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:checkedChip="@id/color_marker_default"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/color_marker_default"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_default"
                app:chipIcon="@drawable/ic_circle"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/color_marker_red"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red"
                app:chipIcon="@drawable/ic_circle"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/marker_red" />

            <com.google.android.material.chip.Chip
                android:id="@+id/color_marker_blue"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue"
                app:chipIcon="@drawable/ic_circle"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/marker_blue" />

            <com.google.android.material.chip.Chip
                android:id="@+id/color_marker_green"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green"
                app:chipIcon="@drawable/ic_circle"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/marker_green" />

            <com.google.android.material.chip.Chip
                android:id="@+id/color_marker_yellow"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_yellow"
                app:chipIcon="@drawable/ic_circle"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/marker_yellow" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_preferred_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/preferred_zone"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_preferred_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_horizontal"
            app:checkedButton="@id/rb_zone_none"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_zone_none"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_starting_zone_left"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_starting_zone_left"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_starting_zone_right"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_starting_zone_right"
                android:textSize="16sp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_notes"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_notes"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
