<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:layout_marginEnd="@dimen/card_horizontal_margin"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_match_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="19sp"
            tools:text="#1" />

        <TextView
            android:id="@+id/tv_match_red_alliance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redAlliance"
            android:textSize="16sp"
            tools:text="@string/match_info_red_alliance" />

        <TextView
            android:id="@+id/tv_match_blue_alliance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blueAlliance"
            android:textSize="16sp"
            tools:text="@string/match_info_blue_alliance" />

        <TextView
            android:id="@+id/tv_match_detailed_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="17.5sp"
            tools:text="@string/match_draw" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
