<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:endIconTint="?android:textColorPrimary"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/action_search"
            android:maxLength="100"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/group_color_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_default"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_default"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_red"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_red"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/marker_red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_blue"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_blue"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/marker_blue" />

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_green"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_green"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/marker_green" />

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_purple"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_purple"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/marker_purple" />

        <com.google.android.material.chip.Chip
            android:id="@+id/color_marker_yellow"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/color_yellow"
            app:chipIcon="@drawable/ic_circle"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/marker_yellow" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>